# eta

./: .gitignore  CLAUDE.md  Makefile  README.md  build.eta  justfile  meson.build  ols.json
eta/: arena.c  arena.h  main.c  main.odin  utils.h
eta/control/: arena.odin  index.odin  source.odin
eta/lexer/: lexer.odin  token.odin
subprojects/: .gitignore  muc.wrap
